test/interaction/Issue2560.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?0 : proofAG _v'_43 ?1 : Set _v'_43 : FVec (suc n) [ at Issue2560.agda:25.25-26 ] _45 : pre v v' p [ at Issue2560.agda:25.10-38 ] _49 : FVec (suc n) [ at Issue2560.agda:33.19-20 ] _55 : pre v v' p [ at Issue2560.agda:34.30-31 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: pre FNil X p =< pre v v' p (blocked on _49) pre FNil _v'_43 p =< pre v v' p (blocked on _v'_43)" nil)
((last . 1) . (agda2-goals-action '(0 1)))
((last . 1) . (agda2-goals-action '(0 1)))
((last . 2) . (agda2-make-case-action '("preAG₂ _ ()")))
((last . 1) . (agda2-goals-action '(0 1)))
